force-app/main/default/objects/Training__c/fields/Duree__c.field-meta.xml
<CustomField>
    <fullName>Duree__c</fullName>
    <label>Duree</label>
    <type>Time</type>
</CustomField>