force-app/main/default/objects/Training__c/fields/nom__c.field-meta.xml
<CustomField>
    <fullName>nom__c</fullName>
    <label>Nom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>