force-app/main/default/objects/Training__c/fields/Prix__c.field-meta.xml
<CustomField>
    <fullName>Prix__c</fullName>
    <label>Prix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>